--- a/.github/workflows/jsr.yml
+++ b/.github/workflows/jsr.yml
@@ -1,8 +1,5 @@
 name: jsr
 
-env:
-  DENO_VERSION: 2.x
-
 on:
   push:
     tags:
@@ -19,9 +16,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: denoland/setup-deno@v1
+      - uses: denoland/setup-deno@v2
         with:
-          deno-version: ${{ env.DENO_VERSION }}
+          deno-version: "2.x"
       - name: Publish
         run: |
           deno run -A jsr:@david/publish-on-tag@0.1.4
